--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "json-server --watch db.json --port 5174"
+    "server": "json-server --watch db.json --port 5174",
+    "test": "vitest"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "happy-dom": "^8.7.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
