--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     "react/prop-types": 0,
     "react/react-in-jsx-scope": 0
   },
-  "ignorePatterns": ["*.config.ts"],
+  "ignorePatterns": ["*.config.*"],
   "plugins": ["react", "import", "jsx-a11y", "@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
