Create addAlbum RTK mutation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
   ],
   "rules": {
     "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "@typescript-eslint/no-unsafe-assignment": "warning"
   },
   "ignorePatterns": ["*.config.*"],
   "plugins": ["react", "import", "jsx-a11y", "@typescript-eslint"],
